infra/k8s/base/chatbot-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-manager
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chatbot-manager
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
